# claude-toolkits

./: CLAUDE.md  PR-AGENT.md  README.md  pyproject.toml
claude_toolkits/: cli.py  launch.sh
claude_toolkits/dashboard/: app.py  cache.py  models.py  review.py  scanner.py  widgets.py
claude_toolkits/hooks/: state_tracker.sh
scripts/: launch.sh
