[project]
name = "claude-toolkits"
version = "0.1.0"
description = "Terminal dashboard for monitoring concurrent Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
ct = "claude_toolkits.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
