[project]
name = "claude-toolkits"
version = "0.1.0"
description = "Terminal dashboard for monitoring concurrent Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
ct = "claude_toolkits.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_toolkits"]

[tool.hatch.build.targets.wheel.force-include]
"claude_toolkits/launch.sh" = "claude_toolkits/launch.sh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
